--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
-
 {
-    "scripts": {},
+    "scripts": {
+        "frontend:build": "cd udagram-frontend && npm run build",
+        "frontend:deploy": "cd udagram-frontend && npm run deploy",
+        "frontend:test": "cd udagram-frontend && npm run test",
+        "backend:build": "",
+        "backend:deploy": ""
+    },
     "devDependencies": {}
 }
