--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,8 @@ jobs:
           name: Front-End Install
           command: |
             npm run frontend:install
-      - run:
-          name: Back-End Install
-          command: |
-            npm run backend:install
+      - node/install-packages:
+          app-dir: udagram-backend
       - run:
           name: Front-End Build
           command: |
