--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: |
             npm run frontend:install
       - node/install-packages:
-          app-dir: ~/udagram/udagram-backend
+          app-dir: ~/udagram/udagram-api
       - run:
           name: Front-End Build
           command: |
