--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 orbs:
   node: circleci/node@4.2.0
+  #for bcrypt 
+  python: circleci/python@1.4.0
   aws-cli: circleci/aws-cli@1.3.1
   #used this reference https://circleci.com/developer/orbs/orb/circleci/aws-elastic-beanstalk#jobs-deploy
   eb: circleci/aws-elastic-beanstalk@1.0.0
@@ -15,12 +17,15 @@ jobs:
       - aws-cli/setup
       - checkout:
           path: ~/udagram
+      
+      - run:
+          name: Back-End Install
+          command: |
+            npm i -g node-gyp && npm run backend:install
       - run:
           name: Front-End Install
           command: |
             npm run frontend:install
-      - node/install-packages:
-          app-dir: ~/udagram/udagram-api
       - run:
           name: Front-End Build
           command: |
