--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,14 @@ jobs:
       - aws-cli/setup
       - checkout:
           path: ~/udagram
-      
+      - run:
+          name: node-gyp install
+          command: |
+            npm i -g node-gyp
       - run:
           name: Back-End Install
           command: |
-            npm i -g node-gyp && npm run backend:install
+            npm run backend:install
       - run:
           name: Front-End Install
           command: |
