--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     docker:
       - image: "cimg/base:stable"
+    executor: node/default
     steps:
       - node/install
       - checkout
