--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
     executor: node/default
     steps:
       - node/install
+        version: 12.18.2
       - checkout
       - aws-cli/setup
       - checkout:
