--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,22 +11,11 @@ jobs:
   build:
     docker:
       - image: "cimg/base:stable"
-    executor: node/default
+    executor:
+      name: node/default
+      tag: '12.18.2'
     steps:
       - node/install
-      - run:
-          name: Swap node versions
-          command: |
-            set +e
-            wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.1/install.sh | bash
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-            nvm install v12
-            nvm alias default 12.18.2
-
-            echo 'export NVM_DIR="$HOME/.nvm"' >> $BASH_ENV
-            echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
       - checkout
       - aws-cli/setup
       - checkout:
