--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,6 @@
 version: 2.1
 orbs:
   node: circleci/node@4.7.0
-  #for bcrypt 
-  python: circleci/python@1.4.0
   aws-cli: circleci/aws-cli@1.3.1
   #used this reference https://circleci.com/developer/orbs/orb/circleci/aws-elastic-beanstalk#jobs-deploy
   eb: circleci/aws-elastic-beanstalk@1.0.0
@@ -11,19 +9,11 @@ jobs:
   build:
     docker:
       - image: "cimg/base:stable"
-    executor:
-      name: node/default
-      tag: '12.18.2'
+    executor: node/default
     steps:
       - node/install
       - checkout
       - aws-cli/setup
-      - checkout:
-          path: ~/udagram
-      - run:
-          name: node-gyp install
-          command: |
-            npm i -g node-gyp
       - run:
           name: Back-End Install
           command: |
