--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "backend:build": "cd udagram-api && npm run build",
         "backend:zip": "cd udagram-api && npm run zip",
         "frontend:deploy": "cd udagram-frontend && npm run deploy",
-        "backend:deploy": "cd udagram-api && npm run deploy"
+        "backend:deploy": "cd udagram-api && npm run deploy",
+        "frontend:test": "cd udagram-frontend && npm run test",
+        "backend:test": "cd udagram-api && npm run test"
     },
     "devDependencies": {}
 }
